# ndk

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
lexer/: CMakeLists.txt  README.md
lexer/include/: lexer.h  lexer.hpp
lexer/src/: lexer.cc  lexer.cpp  main.cc  main.cpp
lib/sleep/: CMakeLists.txt
lib/sleep/include/: sleep.h
lib/sleep/src/: sleep.cc
ngrammar/: CMakeLists.txt  README.md
ngrammar/grammar/: NGLexer.g4  NGParser.g4
ngrammar/tools/: generate.sh
nlexer/: CMakeLists.txt  NOTE.txt  README.md
nlexer/include/: nlexer.h  ntoken.h
nlexer/lib/: nlexer.cc
nlexer/ntkn/: nusantara.ntkn
nlexer/src/: nlexer.cc  ntkn.cc  tkpn.cc
nlexer/tests/: nlexer_tests.cc
nlexer/tkn/: nusantara.tkn
nstdcpp/: CMakeLists.txt  README.md
nstdcpp/alat/: alat.cpp
nstdcpp/alat/waktu_eksekusi/: waktu_eksekusi.cpp
nstdcpp/include/: sleep.h  sleep.hpp  split.h  split.hpp
nstdcpp/include/cetak/: cetak.hpp
nstdcpp/include/waktu_eksekusi/: waktu_eksekusi.hpp
nstdcpp/lib/cetak/: cetak.cpp
nstdcpp/muat/: alat.hpp
nstdcpp/muat/catatan/: catatan.hpp  tipe_catatan.hpp
nstdcpp/muat/cetak/: apakah_bisa_di_cetak_ke_konsol.hpp  bisa_di_cetak.hpp  cetak.hpp
nstdcpp/muat/waktu_eksekusi/: waktu_eksekusi.hpp
nstdcpp/pustaka/catatan/: catatan.cpp
nstdcpp/pustaka/cetak/: cetak.cpp
nstdcpp/src/: sleep.cc  sleep.cpp  split.cc  split.cpp
nstdcpp/utils/waktu_eksekusi/: waktu_eksekusi.cpp
nusantara/: CMakeLists.txt
nusantara/alat/program/: program.cpp
nusantara/include/: alat.hpp  config.hpp
nusantara/include/abp/: abp.hpp
nusantara/include/catatan/: catatan.ap.hpp  catatan.hpp  tipe_catatan.hpp
nusantara/include/cetak/: apakah_bisa_di_cetak_ke_konsol.hpp  cetak.hpp
nusantara/include/command/: command.hpp
nusantara/include/interpreter/: interpreter.hpp
nusantara/include/ir/: irvisitor.hpp
nusantara/include/konfig/: konfig.hpp  konfig.hpp.template  konfig_argumen_proses_berkas.hpp  konfig_catatan.hpp  konfig_ekstensi_berkas.hpp  konfig_label_keluaran.hpp  konfig_sintaks.hpp  versi.hpp  versi.hpp.template
nusantara/include/lexer/: lexer.hpp
nusantara/include/lingkungan_eksekusi/: lingkungan_eksekusi.hpp
nusantara/include/lingkungan_eksekusi/blok_kode/: blok_kode.hpp
nusantara/include/lingkungan_eksekusi/fungsi/: fungsi.hpp  (+1 more)
nusantara/include/node/: node.hpp  node_type.hpp
nusantara/include/parser/: parser.hpp  parser_exception.hpp
nusantara/include/pemecah_sintaks/: pemecah_sintaks.hpp
nusantara/include/penafsir/: penafsir.hpp
nusantara/include/pendengar/: a_pendengar_titik.hpp
nusantara/include/penganalisis_semantik/: penganalisis_semantik.hpp
nusantara/include/pengunjung/: a_pengunjung_titik.hpp
nusantara/include/pengurai_sintaks/: pengurai_sintaks.hpp
nusantara/include/runtime/: runtime.hpp
nusantara/include/semantic_analyzer/: semantic_analyzer.hpp
nusantara/include/token/: tipe_token.hpp  token.hpp  token_regex.hpp
nusantara/include/visitor/: visitor.hpp
nusantara/include/waktu_eksekusi/: waktu_eksekusi.hpp
nusantara/lib/: alat.cpp
nusantara/lib/catatan/: catatan.cpp
nusantara/lib/cetak/: cetak.cpp
nusantara/lib/command/: command.cpp
nusantara/lib/interpreter/: interpreter.cpp
nusantara/lib/ir/: irvisitor.cpp
nusantara/lib/lexer/: lexer.cpp
nusantara/lib/lingkungan_eksekusi/: lingkungan_eksekusi.cpp
nusantara/lib/node/: node.cpp  node_type.cpp
nusantara/lib/parser/: parser.cpp
nusantara/lib/pemecah_sintaks/: pemecah_sintaks.cpp
nusantara/lib/penafsir/: penafsir.cpp
nusantara/lib/penganalisis_semantik/: penganalisis_semantik.cpp
nusantara/lib/pengurai_sintaks/: pengurai_sintaks.cpp
nusantara/lib/perintah/: perintah.cpp
nusantara/lib/semantic_analyzer/: semantic_analyzer.cpp
nusantara/lib/token/: tipe_token.cpp  token_type.cpp
nusantara/lib/waktu_eksekusi/: waktu_eksekusi.cpp
nusantara/muat/: alat.hpp  config.hpp  konfig.hpp  versi.hpp  versi.hpp.template  version.hpp
nusantara/muat/abp/: abp.hpp
nusantara/muat/catatan/: catatan.ap.hpp  catatan.hpp  tipe_catatan.hpp
nusantara/muat/cetak/: apakah_bisa_di_cetak_ke_konsol.hpp  cetak.hpp
nusantara/muat/kompiler/: kompiler_depan.hpp
nusantara/muat/konfig/: konfig.hpp  konfig.hpp.template  konfig_argumen_proses_berkas.hpp  konfig_catatan.hpp  konfig_ekstensi_berkas.hpp  konfig_label_keluaran.hpp  konfig_sintaks.hpp  versi.hpp  versi.hpp.template
nusantara/muat/lingkungan_eksekusi/: lingkungan_eksekusi.hpp
nusantara/muat/listener/: listener.hpp
nusantara/muat/pemecah_sintaks/: pemecah_sintaks.hpp
nusantara/muat/pemroses_awal/: pemroses_awal.hpp
nusantara/muat/penafsir/: penafsir.hpp
nusantara/muat/pendengar/: a_pendengar_titik.hpp
nusantara/muat/penganalisis_semantik/: penganalisis_semantik.hpp
nusantara/muat/pengunjung/: a_pengunjung_titik.hpp
nusantara/muat/pengurai_sintaks/: pengecualian_pengurai_sintaks.hpp  pengurai_sintaks.hpp
nusantara/muat/perintah/: perintah.hpp
nusantara/muat/semantic_analyzer/: semantic_analyzer.hpp
nusantara/muat/token/: tipe_token.hpp  token.hpp  token_regex.hpp  token_type.hpp
nusantara/muat/visitor/: visitor.hpp
nusantara/muat/waktu_eksekusi/: waktu_eksekusi.hpp
nusantara/program/abp/: abp.cpp  abp_main.cpp
nusantara/program/nusantara/: nusantara.cpp
nusantara/program/test/: test.cpp
nusantara/pustaka/: alat.cpp
nusantara/pustaka/catatan/: catatan.cpp
nusantara/pustaka/lexer/: lexer.cpp
nusantara/pustaka/lingkungan_eksekusi/: lingkungan_eksekusi.cpp
nusantara/pustaka/parser/: parser.cpp
nusantara/pustaka/pemecah_sintaks/: pemecah_sintaks.cpp
nusantara/pustaka/penafsir/: penafsir.cpp
nusantara/pustaka/penganalisis_semantik/: penganalisis_semantik.cpp
nusantara/pustaka/pengurai_sintaks/: pengurai_sintaks.cpp
nusantara/pustaka/perintah/: perintah.cpp
nusantara/pustaka/runtime/: runtime.cpp
nusantara/pustaka/token/: tipe_token.cpp
nusantara/pustaka/waktu_eksekusi/: waktu_eksekusi.cpp
nusantara/src/abp/: abp.cpp  abp_main.cpp
nusantara/tests/: test.cpp
nusantara/tools/driver/: driver.cpp
(+239 files in other folders)
